manifests/default/photoprism/ mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 0
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.11
        command: ["mariadbd", "--innodb-buffer-pool-size=512M", "--transaction-isolation=READ-COMMITTED", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci", "--max-connections=512", "--innodb-rollback-on-timeout=OFF", "--innodb-lock-wait-timeout=120"]
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
        resources:
          limits:
            cpu: 1
            memory: 512Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 50m
            memory: 128Mi
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-data-pvc
