manifests/default/photoprism/photoprism-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 0
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:latest
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - name: originals
          mountPath: /photoprism/originals
        - name: import 
          mountPath: /photoprism/import
        - name: storage
          mountPath: /photoprism/storage
      volumes:
      - name: originals
        persistentVolumeClaim:
          claimName: originals-photoprism-pvc
          readOnly: false
      - name: import
        persistentVolumeClaim:
          claimName: import-photoprism-pvc
          readOnly: false
      - name: storage
        persistentVolumeClaim:
          claimName: storage-photoprism-pvc
          readOnly: false
