manifests/default/photoprism/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  selector:
    app: photoprism
  ports:
  - protocol: TCP
    port: 2342
    targetPort: 2342
  type: ClusterIP
