manifests/default/photoprism/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`pictures.senk0.com`)
    priority: 10
    middlewares:
    services:
    - kind: Service
      name: photoprism
      namespace: default
      passHostHeader: true
      port: 2342
  tls:
    secretName: senk0
